label spacing fixes

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -125,6 +125,8 @@ label, .contactform label, .advancedcontactform label {
 	line-height: @font-swatch5-line-height;
 	font-size: @font-swatch5-font-size;
 	color: @font-swatch5-color;
+	display: inline-block;
+	margin-bottom: .3em;
 }
 
 input, select, .contactform input, .contactform select,
